cmake_minimum_required(VERSION 3.23)
project(learning_c)

set(CMAKE_CXX_STANDARD 14)

add_executable(learning_c main.c)
add_executable(hello-world hello-world.c)
add_executable(arithmetic-operator1 arithmetic-operator1.c)
add_executable(arithmetic-bit arithmetic-bit.c)
add_executable(complement complement.c)
add_executable(character character.c)
add_executable(celsius celsius.c)
add_executable(scanf-example scanf-example.c)